--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
   <title>TFO</title>
 </head>
 
